learning-ojs/3.1/en/reviewing.md
---
book: learning-ojs
version: 3.1
---
# Chapter 15: Reviewing

As a reviewer, you will learn of the review request via email or by checking your dashboard:

![Screenshot of assigned submissions queue in reviewer dashboard](./assets/learning-ojs-3-rev-dashboard.png)

From the My Assigned list, find the title and Review link. Notice the lack of any author information in this double-blind peer review process.

Selecting the Review link will take you to the first review step in the submission record, which is much more limited than the editor’s view, and contains no author information.

![Screenshot of a review request](./assets/learning-ojs-3-rev-step1.png)

This first step consists of the following sections:

**Request for Review**: provides some text inviting you to act as a reviewer.

**Article Title**: provides the title of the article.

**Abstract**: provides the abstract text.

Further down the screen, you will find additional information.

![Screenshot showing more of the review request screen](./assets/learning-ojs-3-rev-step1-3.png)

The **View All Submission Details** link will open a window with additional information, including all of the non-author metadata:

![Screenshot of the view all submission details screen](./assets/learning-ojs-3-rev-step1-2.png)

Note that none of these fields are editable by the reviewer, and are only provided to help you conduct a thorough review.

Close this window and move further down the screen. From here you can see the Review Schedule, including all of the relevant due dates.

From here, you can decline or accept the review. If you decline, you will be dropped from the process. If you accept, you will move to review step 2, where you would be able to read any reviewer guidelines provided by the journal.

![Screenshot of reviewer guidelines](./assets/learning-ojs-3-rev-step2.png)

Hit **Continue** to move to step 3. From here you can download a copy of the review files and enter your review comments. The first window is for comments to the editor and the author; the second window is just for the editor.

![Screenshot of the download and review tab](./assets/learning-ojs-3-rev-step3.png)

Once you have read the paper and added your comments, scroll down the page to optionally upload a marked up copy of the review file \(remember to strip any personal identification from the file before uploading it\).

![Screenshot of upload reviewer files and review recommendation drop down](./assets/learning-ojs-3-rev-step3-1.png)

Next, you must then make your recommendation using the dropdown menu.

Your choices include:

**Accept Submission**: it is ready to go to Copyediting as is.

**Revisions Required**: it requires minor changes that can be reviewed and accepted by the editor.

**Resubmit for Review**: it requires major changes and another round of peer review.

**Resubmit Elsewhere**: it doesn’t seem like a good fit for the focus and scope of this journal.

**Decline Submission**: it has too many weakness to ever be accepted.

**See Comments**: if none of the above recommendations make sense, you can leave a comment for the editor detailing your concerns.

Finally, hit the Submit Review button to complete your task. You’ll be asked to confirm.

![Screenshot of confirmation screen to submit review](./assets/learning-ojs-3-rev-step3-2.png)

Hit OK. You will be taken to the final confirmation screen thanking you for your work.

![Screenshot of review submitted completion screen](./assets/learning-ojs-3-rev-step4.png)

That's it! The review is now complete.
